--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "ext-gd": "*",
     "ext-ctype": "*",
     "ext-bcmath": "*",
-    "ext-dom": "*"
+    "ext-dom": "*",
+    "doctrine/inflector": "2.0.4"
   },
   "autoload": {
     "psr-4": {
